<?xml version="1.0"?>
<package format="2">
    <name>rc_common</name>
    <version>0.0.0</version>
    <description>The rc_common package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>


    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>tf</depend>
    <depend>geometry_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>rc_msgs</depend>
    <depend>imu_complementary_filter</depend>
    <depend>imu_filter_madgwick</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>control_msgs</depend>
    <depend>controller_manager_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
