<?xml version="1.0"?>
<package format="2">
    <name>rc_hw</name>
    <version>0.0.0</version>
    <description>The rc_hw package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>rc_common</depend>
    <depend>rc_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>transmission_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>controller_manager</depend>
    <depend>urdf</depend>
    <depend>realtime_tools</depend>
    <depend>serial</depend>

</package>
