<?xml version="1.0"?>
<package format="2">
    <name>rc_msgs</name>
    <version>0.0.0</version>
    <description>The rc_msgs package provides all the messages for all kind of robot</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>

</package>
